nginx/service.yml
kind: Service
apiVersion: v1
metadata:
  name: notes-app-service
  namespace: nginx
spec:
  selector:
    app: notes-app
  ports:
  -  protocol: TCP
     port: 8000
     targetPort: 8000
  type: ClusterIP
---
#adding service for nginx as well

kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  -  protocol: TCP
     port: 8000
     targetPort: 80
  type: ClusterIP
